settings fps + collapse expand bug fixes

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -101,3 +101,7 @@ a:hover {
 .dot-separator {
     color: #04ABED;
 }
+
+.mt-14 {
+    margin-top: 14px;
+}
